--- a/html/pitch.html
+++ b/html/pitch.html
@@ -145,7 +145,7 @@
                         <a class="nav-link fw-bold hover-link" href="#">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold hover-link" href="#">POST</a>
+                        <a class="nav-link fw-bold hover-link" href="http://127.0.0.1:5500/html/list.html?search=&param=likes&sor=">Buisines</a>
                     </li>
                 </ul>
                 <!-- Left links -->
