--- a/html/register-buisiness.html
+++ b/html/register-buisiness.html
@@ -19,7 +19,12 @@
 
 </head>
 
-<body>
+<body style="position: relative; top: 0; width: 100vw;">
+        <!--message box-->
+        <div id="message" class="message opacity-75">
+            <span id="messageText"></span>
+        </div>
+     <!--message box-->
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- Container wrapper -->
@@ -45,7 +50,7 @@
                         <a class="nav-link fw-bold hover-link" href="#">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold hover-link" href="#">POST</a>
+                        <a class="nav-link fw-bold hover-link" href="http://127.0.0.1:5500/html/list.html?search=&param=likes&sor=">Buisines</a>
                     </li>
                 </ul>
                 <!-- Left links -->
