--- a/html/list.html
+++ b/html/list.html
@@ -44,7 +44,8 @@
                         <a class="nav-link fw-bold hover-link" href="http://127.0.0.1:5500/html/home.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold hover-link" href="#">POST</a>
+                        <a class="nav-link fw-bold hover-link"
+                            href="http://127.0.0.1:5500/html/list.html?search=&param=likes&sor=">Buisines</a>
                     </li>
                 </ul>
                 <!-- Left links -->
@@ -490,30 +491,29 @@
             return requestParam;
         }
         function renderBuisiness(response, idRender) {
-            window.scroll({ top: 100 });
-            let temp = `<div class="d-flex justify-content-evenly mb-5">`;
-            let count = 0;
-            if (response.length == null || response.length == "") {
-                temp = `<div class="text-center"> No List</div>`;
-            } else {
-                for (let i = 0; i < response.length; i++) {
-                    if (count % 3 == 0) {
-                        temp += `</div>`;
-                        temp += `<div class="d-flex justify-content-evenly mb-5">`;
-                    }
-                    temp += `<div class='col-3'>
-      <div class='card' style='position: relative;'>
+    let temp = `<div class="d-flex justify-content-evenly mb-5">`;
+    let count = 0;
+    if (response.length == null || response.length == "") {
+        temp = `<div class="text-center"> No List</div>`;
+    } else {
+        for (let i = 0; i < response.length; i++) {
+            if (count % 3 == 0) {
+                temp += `</div>`;
+                temp += `<div class="d-flex justify-content-evenly mb-5">`;
+            }
+            temp += `<div class='col-3'>
+      <div class='card' style='position: relative;' style="height:412px">
           <div class='like-box text-center'>
               <i class='fa-solid fa-heart'></i>
               <div>${response[i].likes}</div>
           </div>
           <div class='bg-image hover-overlay ripple' data-mdb-ripple-color='light'>
-              <img src='${response[i].img}' class='img-fluid' />
+              <img src='${response[i].img}' class='img-fluid' style="height:173px";/>
               <a href='#!'>
                   <div class='mask' style='background-color: rgba(251, 251, 251, 0.15);'></div>
               </a>
           </div>
-          <div class='card-body'>
+          <div class='card-body' style="height:254px">
               <h5 class='card-title'>${response[i].name}</h5>
               <p class='card-text mb-1'>${response[i].describes}.</p>
               <div class='d-flex mb-2 hover-link '>
@@ -524,11 +524,14 @@
           </div>
       </div>
   </div>`;
-                    count++;
-                }
-            }
-            $(idRender).html(temp);
+            count++;
+        }
+    }
+    $(idRender).html(temp);
 
+}
+        function nextDetails(id) {
+            window.location.href = `http://127.0.0.1:5500/html/details.html?id=${id}`;
         }
         function renderPaging(totalPages, pageNumber) {
             let temp = " <ul class='pagination'>";
