--- a/html/managerent.html
+++ b/html/managerent.html
@@ -145,7 +145,7 @@
                         <a class="nav-link fw-bold hover-link" href="http://127.0.0.1:5500/html/home.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold hover-link" href="#">POST</a>
+                        <a class="nav-link fw-bold hover-link" href="http://127.0.0.1:5500/html/list.html?search=&param=likes&sor=">Buisines</a>
                     </li>
                 </ul>
                 <!-- Left links -->
@@ -685,7 +685,6 @@
         }
         function renderHistoryByUser(data) {
             let temp = "";
-            console.log(data)
             for (let i = 0; i < data.length; i++) {
                 temp += ` <tr>
                                   <td>
